@@ -1,6 +1,7 @@
 2008-06-24  Ales Hakl  <ales at hakl dot net>
 
 	* src/bignum.c (bignum_sub): bignum subtraction (working)
+	(bignum_mul): bignum multiplication (slow)
 
 2008-06-23  Ales Hakl  <ales at hakl dot net>
 
